[package]
name = "random-ai-prompt"
version = "0.0.0"
description = "Random AI Prompt — desktop edition"
authors = ["junebug12851"]
license = "Apache-2.0"
repository = "https://github.com/junebug12851/random-ai-prompt"
edition = "2021"
rust-version = "1.77.2"

# The desktop shell is a thin Rust wrapper: it stages the bundled app to a writable
# working copy, launches the existing Node `serve.js` backend as a child process
# (sidecar), waits for it to listen, then points the WebView at it. All app logic
# stays in the JS engine + server — this crate never duplicates it.

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# OFF by default. Enables the in-app desktop auto-updater (Tauri updater plugin), the Phase 2 of the
# updates design (notes/plans/updates-upgrades.md). It is a compile-in feature so a normal build never
# pulls the plugin in — current builds (`tauri build`) are byte-for-byte unchanged. Turning it on also
# needs the signing keypair + the `plugins.updater` config fragment (tauri.updater.conf.json); the
# `desktop:build:updater` npm script wires both. See notes/reference/desktop-updater.md.
updater = ["dep:tauri-plugin-updater"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
# Optional: only compiled when the `updater` feature is enabled (see [features] above).
tauri-plugin-updater = { version = "2", optional = true }
